--- a/Frontend/popeyes-front/src/modules/widgets/components/header.css
+++ b/Frontend/popeyes-front/src/modules/widgets/components/header.css
@@ -11,11 +11,11 @@ body{
 .nav{
     display: flex;
     align-items: center;
-    justify-content:space-around;
     padding: 10px 20px;
     background-color: white;
     color: black;
-    
+
+    font-family: 'Open Sans';
 }
 
 .container-img{
@@ -29,26 +29,83 @@ body{
     height: 41px;
 }
 
+.container-boton{
+    display: flex;
+    margin-left: 45px;
+}
+
+.nav button{
+    padding: 10px;
+    border-radius: 50px;
+    border: none;
+
+    background-color: #ff7f00;
+    color: white;
+
+    cursor: pointer;
+
+
+    align-items: center;
+    font-family: 'Open Sans';
+    font-weight: 900;
+    font-size: 14px;    
+}
+
+.container-texto{
+    margin-left: 75px;
+}
+
 .nav a {
     color: inherit;
     text-decoration: none;
 }
 
-
-
 .nav ul{
     display: flex;
-    gap: 20px;
+
     list-style: none;
 
-    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-    font-weight: 400;
-    font-size: 14px;
+
+    font-size: 15px;
+    font-weight: 760;
 }
 
-
+.nav li{
+    margin-right: 18px;
+}
 
 .nav li:hover{
-    color: turquoise;
+    color: rgb(61, 206, 192);
 }
 
+.container-extra{
+    display: flex;
+    margin-left: 100px;
+
+    font-size: 13px;
+    font-weight: 750;
+}
+
+
+.orange-text{
+    color: #ff7f00;
+    font-weight: 750;
+    
+}
+
+.extra{
+    cursor: pointer;
+    margin-right: 40px;
+}
+
+.extra-s{
+    cursor: pointer;
+    margin-right: 30px;
+    
+}
+
+.extra-c{
+    cursor: pointer;
+    align-items: center;
+
+}
