--- a/Frontend/popeyes-front/src/App.css
+++ b/Frontend/popeyes-front/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+/*
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +43,4 @@
 .read-the-docs {
   color: #888;
 }
+*/
