Avance header y footer
Faltan los iconos del header, las fotos del footer y las posiciones en el footer

--- a/Frontend/popeyes-front/src/modules/widgets/components/header.css
+++ b/Frontend/popeyes-front/src/modules/widgets/components/header.css
@@ -6,16 +6,18 @@
 
 body{
     margin: 0;
+    padding: 0;
 }
 
 .nav{
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 12px 20px;
     background-color: white;
     color: black;
 
     font-family: 'Open Sans';
+
 }
 
 .container-img{
