--- a/Frontend/popeyes-front/src/modules/widgets/components/header.css
+++ b/Frontend/popeyes-front/src/modules/widgets/components/header.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    margin: 0;
-    padding: 0;
+   margin: 0;
+   padding: 0;
 }
 
 .nav{
@@ -18,6 +18,9 @@ body{
 
     font-family: 'Open Sans';
 
+    position:sticky;
+    top: 0;
+    margin: auto;
 }
 
 .container-img{
